Fix typos in content

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <!-- Add this section within the body of your HTML file -->
     <section id="about">
         <h2>About Us</h2>
-        <p>Welcome to our website. This is the About page where you can learn more about our mission and values.</p>
+        <p>Welcome. This is the About page where you can learn more about our mission and values.</p>
     </section>
     
     <!-- Existing content -->
